fix version api
